@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Add 'Crossfire.Object.Race' attribute.
+ plugins/cfpython/cfpython_object.c
+ plugins/cfpython/include/cfpython_object_private.h
+Nicolas Weeger 2007-05-08
+
 server/plugins.c: fix plugin unloading which didn't call the closePlugin function.
 server/c_wiz.c: document.
 Nicolas Weeger 2007-05-07
